# otus_library-flask

./: app.py  pyproject.toml
crud/: __init__.py  author.py  book.py
forms/: author.py  book.py
migrations/versions/: 0af320d11c59_authors_and_books.py  3d8d299f17fc_authors_and_books.py
models/: __init__.py  associations.py  author.py  book.py
schemas/: __init__.py  author.py
static/js/: button-count.js  product-details.js
templates/: base.html  home.html
templates/authors/: add.html  details.html  list.html
templates/books/: add.html  details.html  list.html
views/: authors.py  books.py
